--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,16 +7,37 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" /> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,700;1,800&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
-        <div class="top">
-          <input type="search" placeholder="Search"/>
+        <div class="box">
+            <img th:src="@{/assets/favicon.ico.png}" />
+            <h2 class="title">Raiane Dev</h2>
         </div>
-        <div>
-            <img src="" />
-            <p>Name User</p>
+      
+        <div class="row center">
+            <h6>
+              Call PT 51 995654583
+            </h6>
+            <span class="separator-entries"> / </span>
+            <h6>
+              raiane@gmail.com
+            </h6>
+        </div>
+      
+        <div class="row end columns-three">
+          <div>
+            <button class="light">
+              Login
+            </button>
+            <button class="dark">
+              Registry now
+            </button>
+            <button class="light">
+              Menu
+            </button>
+          </div>
         </div>
     </header>
 
