--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,116 @@
 <div th:include="fragments/header"/>
 
-<div layout:fragment="content">
-      <p>Changing contents</p>
+<div layout:fragment="content" class="content">
+  <section class="home">
+      <h2 class=""latest>
+          Latest Updates
+      </h2>
+
+      <section class="boxes">
+
+        <div class="box-single">
+          <img th:src="@{/assets/favicon.ico.png}" />
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium massa sit amet elit porta, non placerat tortor tincidunt. Phasellus malesuada volutpat ante sit amet fringilla. Nulla sapien dui, porta et gravida et, placerat scelerisque purus. Nunc venenatis, purus in malesuada pellentesque, quam odio auctor arcu, ut interdum massa sem eget risus. Vestibulum ullamcorper libero arcu, et lobortis lorem commodo eget. Fusce nec mauris blandit, blandit magna non, pulvinar lorem. Nulla fringilla nisl at mollis dictum. Pellentesque rutrum tempor hendrerit. Sed rhoncus purus eget mi placerat blandit. Donec tincidunt tempor auctor. In vitae nisl nec nunc imperdiet placerat. Suspendisse malesuada, neque at mollis blandit, ante nulla rhoncus ante, sit amet vehicula lacus mauris nec diam. Morbi vitae viverra nulla. Sed dui est, semper in blandit sit amet, mollis sed lacus.</p>
+          <div class="box-user">
+              <figure>
+                <img th:src="@{/assets/favicon.ico.png}" />
+              </figure>
+              <div>
+                <h6> Name</h6>
+                <span>Profission</span>
+              </div>
+          </div>
+        </div>
+
+
+        <div class="box-single">
+          <img th:src="@{/assets/favicon.ico.png}" />
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium massa sit amet elit porta, non placerat tortor tincidunt. Phasellus malesuada volutpat ante sit amet fringilla. Nulla sapien dui, porta et gravida et, placerat scelerisque purus. Nunc venenatis, purus in malesuada pellentesque, quam odio auctor arcu, ut interdum massa sem eget risus. Vestibulum ullamcorper libero arcu, et lobortis lorem commodo eget. Fusce nec mauris blandit, blandit magna non, pulvinar lorem. Nulla fringilla nisl at mollis dictum. Pellentesque rutrum tempor hendrerit. Sed rhoncus purus eget mi placerat blandit. Donec tincidunt tempor auctor. In vitae nisl nec nunc imperdiet placerat. Suspendisse malesuada, neque at mollis blandit, ante nulla rhoncus ante, sit amet vehicula lacus mauris nec diam. Morbi vitae viverra nulla. Sed dui est, semper in blandit sit amet, mollis sed lacus.</p>
+          <div class="box-user">
+              <figure>
+                <img th:src="@{/assets/favicon.ico.png}" />
+              </figure>
+              <div>
+                <h6> Name</h6>
+                <span>Profission</span>
+              </div>
+          </div>
+        </div>
+        <div class="box-single">
+          <img th:src="@{/assets/favicon.ico.png}" />
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium massa sit amet elit porta, non placerat tortor tincidunt. Phasellus malesuada volutpat ante sit amet fringilla. Nulla sapien dui, porta et gravida et, placerat scelerisque purus. Nunc venenatis, purus in malesuada pellentesque, quam odio auctor arcu, ut interdum massa sem eget risus. Vestibulum ullamcorper libero arcu, et lobortis lorem commodo eget. Fusce nec mauris blandit, blandit magna non, pulvinar lorem. Nulla fringilla nisl at mollis dictum. Pellentesque rutrum tempor hendrerit. Sed rhoncus purus eget mi placerat blandit. Donec tincidunt tempor auctor. In vitae nisl nec nunc imperdiet placerat. Suspendisse malesuada, neque at mollis blandit, ante nulla rhoncus ante, sit amet vehicula lacus mauris nec diam. Morbi vitae viverra nulla. Sed dui est, semper in blandit sit amet, mollis sed lacus.</p>
+          <div class="box-user">
+              <figure>
+                <img th:src="@{/assets/favicon.ico.png}" />
+              </figure>
+              <div>
+                <h6> Name</h6>
+                <span>Profission</span>
+              </div>
+          </div>
+        </div>
+        <div class="box-single">
+          <img th:src="@{/assets/favicon.ico.png}" />
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium massa sit amet elit porta, non placerat tortor tincidunt. Phasellus malesuada volutpat ante sit amet fringilla. Nulla sapien dui, porta et gravida et, placerat scelerisque purus. Nunc venenatis, purus in malesuada pellentesque, quam odio auctor arcu, ut interdum massa sem eget risus. Vestibulum ullamcorper libero arcu, et lobortis lorem commodo eget. Fusce nec mauris blandit, blandit magna non, pulvinar lorem. Nulla fringilla nisl at mollis dictum. Pellentesque rutrum tempor hendrerit. Sed rhoncus purus eget mi placerat blandit. Donec tincidunt tempor auctor. In vitae nisl nec nunc imperdiet placerat. Suspendisse malesuada, neque at mollis blandit, ante nulla rhoncus ante, sit amet vehicula lacus mauris nec diam. Morbi vitae viverra nulla. Sed dui est, semper in blandit sit amet, mollis sed lacus.</p>
+          <div class="box-user">
+              <figure>
+                <img th:src="@{/assets/favicon.ico.png}" />
+              </figure>
+              <div>
+                <h6> Name</h6>
+                <span>Profission</span>
+              </div>
+          </div>
+        </div>
+        <div class="box-single">
+          <img th:src="@{/assets/favicon.ico.png}" />
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium massa sit amet elit porta, non placerat tortor tincidunt. Phasellus malesuada volutpat ante sit amet fringilla. Nulla sapien dui, porta et gravida et, placerat scelerisque purus. Nunc venenatis, purus in malesuada pellentesque, quam odio auctor arcu, ut interdum massa sem eget risus. Vestibulum ullamcorper libero arcu, et lobortis lorem commodo eget. Fusce nec mauris blandit, blandit magna non, pulvinar lorem. Nulla fringilla nisl at mollis dictum. Pellentesque rutrum tempor hendrerit. Sed rhoncus purus eget mi placerat blandit. Donec tincidunt tempor auctor. In vitae nisl nec nunc imperdiet placerat. Suspendisse malesuada, neque at mollis blandit, ante nulla rhoncus ante, sit amet vehicula lacus mauris nec diam. Morbi vitae viverra nulla. Sed dui est, semper in blandit sit amet, mollis sed lacus.</p>
+          <div class="box-user">
+              <figure>
+                <img th:src="@{/assets/favicon.ico.png}" />
+              </figure>
+              <div>
+                <h6> Name</h6>
+                <span>Profission</span>
+              </div>
+          </div>
+        </div>
+        <div class="box-single">
+          <img th:src="@{/assets/favicon.ico.png}" />
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium massa sit amet elit porta, non placerat tortor tincidunt. Phasellus malesuada volutpat ante sit amet fringilla. Nulla sapien dui, porta et gravida et, placerat scelerisque purus. Nunc venenatis, purus in malesuada pellentesque, quam odio auctor arcu, ut interdum massa sem eget risus. Vestibulum ullamcorper libero arcu, et lobortis lorem commodo eget. Fusce nec mauris blandit, blandit magna non, pulvinar lorem. Nulla fringilla nisl at mollis dictum. Pellentesque rutrum tempor hendrerit. Sed rhoncus purus eget mi placerat blandit. Donec tincidunt tempor auctor. In vitae nisl nec nunc imperdiet placerat. Suspendisse malesuada, neque at mollis blandit, ante nulla rhoncus ante, sit amet vehicula lacus mauris nec diam. Morbi vitae viverra nulla. Sed dui est, semper in blandit sit amet, mollis sed lacus.</p>
+          <div class="box-user">
+              <figure>
+                <img th:src="@{/assets/favicon.ico.png}" />
+              </figure>
+              <div>
+                <h6> Name</h6>
+                <span>Profission</span>
+              </div>
+          </div>
+        </div>
+         <div class="box-single">
+          <img th:src="@{/assets/favicon.ico.png}" />
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium massa sit amet elit porta, non placerat tortor tincidunt. Phasellus malesuada volutpat ante sit amet fringilla. Nulla sapien dui, porta et gravida et, placerat scelerisque purus. Nunc venenatis, purus in malesuada pellentesque, quam odio auctor arcu, ut interdum massa sem eget risus. Vestibulum ullamcorper libero arcu, et lobortis lorem commodo eget. Fusce nec mauris blandit, blandit magna non, pulvinar lorem. Nulla fringilla nisl at mollis dictum. Pellentesque rutrum tempor hendrerit. Sed rhoncus purus eget mi placerat blandit. Donec tincidunt tempor auctor. In vitae nisl nec nunc imperdiet placerat. Suspendisse malesuada, neque at mollis blandit, ante nulla rhoncus ante, sit amet vehicula lacus mauris nec diam. Morbi vitae viverra nulla. Sed dui est, semper in blandit sit amet, mollis sed lacus.</p>
+          <div class="box-user">
+              <figure>
+                <img th:src="@{/assets/favicon.ico.png}" />
+              </figure>
+              <div>
+                <h6> Name</h6>
+                <span>Profission</span>
+              </div>
+          </div>
+        </div>
+
+      </section>
   </div>
+</section>
 
 <div th:include="fragments/footer"/>
