--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,19 @@
           Latest Updates
       </h2>
 
+      <div class="slider">
+        <div>
+          <figure class="in_destach">
+            <img th:src="@{/assets/banner.jpg}" />
+          </figure>
+        </div>
+        <div>
+          <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium massa sit amet elit porta, non placerat tortor tincidunt. Phasellus malesuada volutpat ante sit amet fringilla. Nulla sapien dui, porta et gravida et, placerat scelerisque purus. lacus.</p>
+        </div>
+      </div>
+
+
       <section class="boxes">
 
         <div class="box-single">
